# buibui

./: LICENSE  README.md  index.html  package.json  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
src/: Root.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  state.rs
src-tauri/src/api/: details.rs  hack.rs  http.rs  mod.rs
src-tauri/src/manage/: collection.rs  emulator.rs  mod.rs  settings.rs
src/components/: HackGalleryItem.tsx  HackGalleryRow.tsx  Loading.tsx  Modal.tsx  Navbar.tsx
src/lib/: hack.ts  hooks.ts  index.ts  modal.ts
src/pages/: Gallery.tsx
