[package]
name = "buibui"
version = "0.1.0"
description = "Bui Bui"
authors = ["ChristopherJMiller"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11"
hyper = "0.14"
scraper = "0.17"
derive_builder = "0.12"
strum = { version = "0.25", features = ["derive"] }
byte-unit = "4.0.19"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
app_dirs2 = "2"
thiserror = "1"
toml = "0.7"
zip = { version = "0.6", default-features = false, features = [
    "deflate",
    "bzip2",
    "zstd",
    "time",
] }
tokio = { version = "1", features = ["full"] }
once_cell = "1"
url = "2"
flips = "0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
